--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             In my spare time, I actively engage with the gaming community by
             live streaming Valorant gameplay on Twitch, fostering a dedicated
             audience and demonstrating my passion for gaming and content
-            creation.
+            creation.Bleh
           </p>
         </div>
       </section>
