--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aarsh Padia</title>
+    <title>Manav Ranavaya</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,9 @@
           />
           <div class="profile-details">
             <h1 class="name">Aarsh Padia</h1>
-            <p class="small-text">Engineer . Arch Linux User . Gamer . Streamer </p>
+            <p class="small-text">
+              Engineer . Arch Linux User . Gamer . Streamer
+            </p>
             <p>
               Learning about web and trying to help out other devs in the
               process. I love open source.
@@ -36,13 +38,22 @@
             ><img class="sec1-icons" src="./assets/email.svg" alt="email-icon"
           /></a>
           <a href="https://www.linkedin.com/in/aarshpadia21/"
-            ><img class="sec1-icons" src="./assets/linkdln.svg" alt="linkdln link"
+            ><img
+              class="sec1-icons"
+              src="./assets/linkdln.svg"
+              alt="linkdln link"
           /></a>
           <a href="https://github.com/aarsh21"
-            ><img class="sec1-icons" src="./assets/github.svg" alt="github link"
+            ><img
+              class="sec1-icons"
+              src="./assets/github.svg"
+              alt="github link"
           /></a>
           <a href="https://twitter.com/aarshwow"
-            ><img class="sec1-icons" src="./assets/twitter.svg" alt="twitter link"
+            ><img
+              class="sec1-icons"
+              src="./assets/twitter.svg"
+              alt="twitter link"
           /></a>
         </div>
       </section>
