--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             alt="profile-picture"
           />
           <div class="profile-details">
-            <h1 class="name">Aarsh Padia</h1>
+            <h1 class="name">Manav Ranavaya</h1>
             <p class="small-text">
               Engineer . Arch Linux User . Gamer . Streamer
             </p>
